--- a/package.json
+++ b/package.json
@@ -32,6 +32,21 @@
                 "category": "网易云音乐"
             },
             {
+                "command": "neteasemusic.previous",
+                "title": "上一首",
+                "category": "网易云音乐"
+            },
+            {
+                "command": "neteasemusic.next",
+                "title": "下一首",
+                "category": "网易云音乐"
+            },
+            {
+                "command": "neteasemusic.list",
+                "title": "播放列表",
+                "category": "网易云音乐"
+            },
+            {
                 "command": "neteasemusic.search",
                 "title": "搜索",
                 "category": "网易云音乐"
@@ -108,6 +123,10 @@
                     "when": "neteasemusic.on && !neteasemusic.logged"
                 },
                 {
+                    "command": "neteasemusic.logout",
+                    "when": "neteasemusic.on && neteasemusic.logged"
+                },
+                {
                     "command": "neteasemusic.search",
                     "when": "neteasemusic.on"
                 },
@@ -150,6 +169,18 @@
                 {
                     "command": "neteasemusic.user.playlist",
                     "when": "neteasemusic.on && neteasemusic.logged"
+                },
+                {
+                    "command": "neteasemusic.list",
+                    "when": "neteasemusic.on && neteasemusic.track"
+                },
+                {
+                    "command": "neteasemusic.previous",
+                    "when": "neteasemusic.on && neteasemusic.track"
+                },
+                {
+                    "command": "neteasemusic.next",
+                    "when": "neteasemusic.on && neteasemusic.track"
                 },
                 {
                     "command": "neteasemusic.play",
