--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "vsc-netease-music",
     "displayName": "VSC Netease Music",
-    "description": "UNOFFICAL Netease Music extension for Visual Studio Code",
+    "description": "UNOFFICIAL Netease Music extension for Visual Studio Code",
     "version": "0.0.9",
     "icon": "icon.png",
     "publisher": "nondanee",
