增加在浏览器中打开当前歌曲信息页的功能
需增加npm包 open@0.0.5

--- a/package.json
+++ b/package.json
@@ -143,6 +143,11 @@
                 "command": "neteasemusic.toplist",
                 "title": "%command.neteasemusic.toplist%",
                 "category": "%category.neteasemusic.discover%"
+            },
+            {
+                "command": "neteasemusic.openinbrowser",
+                "title": "%command.neteasemusic.openinbrowser%",
+                "category": "%category.neteasemusic%"
             }
         ],
         "menus": {
@@ -246,6 +251,10 @@
                 {
                     "command": "neteasemusic.pause",
                     "when": "neteasemusic.on && neteasemusic.track && neteasemusic.playing"
+                },
+                {
+                    "command": "neteasemusic.openinbrowser",
+                    "when": "neteasemusic.on && neteasemusic.track"
                 }
             ]
         }
@@ -262,6 +271,7 @@
         "@types/mocha": "^2.2.42"
     },
     "dependencies": {
+        "open": "0.0.5",
         "ws": "^6.1.3"
     }
 }
