修复不规范问题和增加more按钮
1.删除open@0.0.5 npm包，改用vscode.env.openExternal实现
2.将controll关于浏览器打开的部分代码移入interaction.js文件
3.增加more按钮，打开quickPick，将从浏览器打开的功能移入quickPick中

--- a/package.json
+++ b/package.json
@@ -148,6 +148,11 @@
                 "command": "neteasemusic.openinbrowser",
                 "title": "%command.neteasemusic.openinbrowser%",
                 "category": "%category.neteasemusic%"
+            },
+            {
+                "command": "neteasemusic.moreaction",
+                "title": "%command.neteasemusic.moreaction%",
+                "category": "%category.neteasemusic%"
             }
         ],
         "menus": {
@@ -255,6 +260,10 @@
                 {
                     "command": "neteasemusic.openinbrowser",
                     "when": "neteasemusic.on && neteasemusic.track"
+                },
+                {
+                    "command": "neteasemusic.moreaction",
+                    "when": "neteasemusic.on && neteasemusic.track"
                 }
             ]
         }
@@ -271,7 +280,6 @@
         "@types/mocha": "^2.2.42"
     },
     "dependencies": {
-        "open": "0.0.5",
         "ws": "^6.1.3"
     }
 }
